--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>My Website</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1>Hello! This is my new homepage.</h1>
-  <p>Welcome to my personal website.</p>
-</body>
-</html>
+<title>Marina Orozco González</title>
+<meta name="author" …>
+<meta name="viewport" …>
+<meta property="og:title" …>
+<meta property="og:description" …>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<link rel="stylesheet" href="style.css">
