Add content to index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,32 @@
-<title>Marina Orozco González</title>
-<meta name="author" …>
-<meta name="viewport" …>
-<meta property="og:title" …>
-<meta property="og:description" …>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-<link rel="stylesheet" href="style.css">
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <title>Marina Orozco González</title>
+
+    <meta name="author" content="Marina Orozco González">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Marina Orozco González">
+    <meta property="og:description" content="Your description here">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <header>
+        <h1>Marina Orozco González</h1>
+        <p>CS & Robotics Ph.D. Student at Universidad Pablo de Olavide</p>
+
+        <div class="social-links">
+            <a href="https://github.com/marinaog"><i class="fa-brands fa-github"></i></a>
+        </div>
+    </header>
+
+    <section id="about">
+        <p>A short intro about you goes here.</p>
+    </section>
+</body>
+
+</html>
