--- a/index.html
+++ b/index.html
@@ -15,18 +15,46 @@
 </head>
 
 <body>
-    <header>
-        <h1>Marina Orozco González</h1>
-        <p>CS & Robotics Ph.D. Student at Universidad Pablo de Olavide</p>
+    <div class="hero-section noselect" id="about">
+        <div class="hero-content">
 
-        <div class="social-links">
-            <a href="https://github.com/marinaog"><i class="fa-brands fa-github"></i></a>
+            <!-- Main Header Block -->
+            <div class="content header-container">
+                <div class="header-text">
+
+                    <div class="header-name">
+                        <h1>Marina Orozco González</h1>
+                    </div>
+
+                    <div class="header-subtitle">
+                        CS & Robotics Ph.D. Student at Universidad Pablo de Olavide<br>
+                        Researching XYZ (whatever you want)<br>
+                    </div>
+
+                    <div class="header-links">
+                        <a class="btn" href="https://github.com/marinaog" aria-label="GitHub" data-label="GitHub" target="_blank">
+                            <i class="fa-brands fa-github"></i>
+                        </a>
+                        <!-- Add more buttons if you want -->
+                    </div>
+
+                </div>
+
+                <!-- Profile picture block (requires the CSS background URL) -->
+                <div class="header-profile-picture"></div>
+            </div>
+
+            <br>
+
+            <!-- Intro Text -->
+            <div class="content header-container divider">
+                <span class="intro-text">
+                    Short intro about you goes here.
+                </span>
+            </div>
+
         </div>
-    </header>
-
-    <section id="about">
-        <p>A short intro about you goes here.</p>
-    </section>
+    </div>
 </body>
 
 </html>
