Update research interests and intro text in index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                     <div class="header-subtitle">
                         CS & Robotics Ph.D. Student at Universidad Pablo de Olavide<br>
-                        Researching XYZ (whatever you want)<br>
+                        Researching in Social Robotics, SLAM, Computer Vision<br>
                     </div>
 
                     <div class="header-links">
@@ -49,7 +49,7 @@
             <!-- Intro Text -->
             <div class="content header-container divider">
                 <span class="intro-text">
-                    Short intro about you goes here.
+                    I am a PhD student at <a href="https://robotics.upo.es/">Service Robotics Lab</a> in Universidad Pablo de Olavide,under the supervision of <a href="https://investiga.upo.es/investigadores/160002/detalle">Luis Merino Cabañas</a>. My research interests include <b>SLAM<b>, <b>Computer Vision<b> and <b>Social Robotics<b>.   
                 </span>
             </div>
 
