Added Google Scholar

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     </div>
 
                     <div class="header-links">
+                        <a class="btn" href="https://scholar.google.com/citations?user=vg4rVmUAAAAJ&hl=es" aria-label="Google Scholar" data-label="Scholar" target="_blank" rel="noopener"><i class="fa-brands fa-google"></i></a>
                         <a class="btn" href="https://github.com/marinaog" aria-label="GitHub" data-label="GitHub" target="_blank">
                             <i class="fa-brands fa-github"></i>
                         </a>
